# Startpage

./: .gitignore  Cargo.toml  Gruntfile.js  Justfile  LICENSE  Makefile  README.md  config.js  config.json  config.json.sample  config.template.yaml  deploy.sh  go.mod  go.sum  index.css  index.html  index.js  index.scss  main.go  package-lock.json  package.json  script.js  style.css  vite.config.ts
Channels/: channels.js  index.html
assets/: config.example.yaml  index.css  index.html.tmpl  index.scss  style.css
channels/: channels.js  index.html  index.js
css/: base.css  color.css  index.css  mobile.css  terminal.css
data/: conf.json  index.css  index.html.tmpl
js/: config.js  index.js  links-channels.js  links-index.js  terminal.js
public/: index.html
src/: App.css  App.jsx  App.scss  AppIcon.jsx  AppIcon.tsx  Config.ts  Desktop.jsx  Desktop.tsx  Dock.jsx  Dock.tsx  Overview.jsx  Overview.tsx  SVGIcon.jsx  SVGIcon.tsx  config.js  config.json.sample  config.rs  icons.jsx  index.css  index.html  index.js  main.jsx  main.rs  main.scss  main.tsx  script.js  startpage.css  startpage.html.j2  startpage.html.mustache  startpage.js  startpage.scss  style.css
src/js/: fortune.js  github.js  startpage.js
src/sass/: _startpage.scss  _variables.scss  main.scss  startpage.scss
src/templates/: base.njs  components.njs  startpage.njs
src/widgets/: links.rs  mod.rs
templates/: index.html
templates/widgets/: links.html
