[package]
name = "startpage"
version = "2.0.0"
edition = "2024"
authors = ["Tryton Lux <code@trytonlux.ca>"]
license-file = "LICENSE"

[dependencies]
actix-files = "0.6"
actix-web = "4"
env_logger = "0.11"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tera = "1"
toml = "0.8"

[profile.release]
strip = true
lto = true
